fixed birthday selection overflow issue

--- a/src/components/app-header/AppHeader.module.scss
+++ b/src/components/app-header/AppHeader.module.scss
@@ -10,7 +10,7 @@
     z-index: 5;
 
     @include for-size(mobile) {
-        height: 10vh;
+        height: 15vh;
     }
 
     h2, h4 {
