--- a/src/components/group-choice/GroupChoice.module.scss
+++ b/src/components/group-choice/GroupChoice.module.scss
@@ -4,14 +4,20 @@
     display: flex;
     color: #fff;
     width: 200px;
-    flex: 1 0 31%;
+    // flex: 1 0 31%;
     height: 150px;
     position: relative;
     overflow: hidden;
-    background-size: contain;
+    // background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 10px;
+
+    @include for-size(mobile) {
+        width: 240px;
+        height: 120px;
+    }
 }
 
 .hoverRect {
